err/tips.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/shutil_get_terminal_size'...
Listing './lib/python3.5/site-packages/backports.shutil_get_terminal_size-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shutil_backports'...
Listing './lib/python3.5/site-packages/tips'...
Compiling './lib/python3.5/site-packages/tips/minigraph.py'...
***   File "./lib/python3.5/site-packages/tips/minigraph.py", line 13
    print "Failed to get terminal size."
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tips/stats.py'...
***   File "./lib/python3.5/site-packages/tips/stats.py", line 114
    print TEXT_1.format(total(7), total(30), total(365),
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tips/test_gen_db.py'...
***   File "./lib/python3.5/site-packages/tips/test_gen_db.py", line 32
    print "\ndoing nothing..."
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tips/tips.py'...
***   File "./lib/python3.5/site-packages/tips/tips.py", line 98
    print "Invalid date(s)."
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tips-1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
